# democracrm

./: .gitignore  404.html  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-implementation.md
.github/workflows/: codeql.yml
configuration/: index.html
democracrm/: functional_tests.py  manage.py  requirements.txt  test_selenium.py
democracrm/accounts/: admin.py  models.py  tests.py
democracrm/appserver/: asgi.py  settings.py  wsgi.py
democracrm/contacts/: admin.py  models.py  tests.py
democracrm/core/: admin.py  models.py  tests.py  urls.py  views.py
democracrm/data/: admin.py  models.py  mohpa_platform.json  tests.py  utils.py
democracrm/democracrm/: asgi.py  settings.py  urls.py  wsgi.py
democracrm/lobbying/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
democracrm/organizing/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
democracrm/places/: admin.py  load.py  models.py  spatialite.py  tests.py  utils.py
democracrm/social/: models.py  tests.py
democracrm/web/: models.py  tests.py
development/documentation/: index.html
development/environment/: index.html
development/permissions/: index.html
development/slugs/: index.html
development/url_scheme/: index.html
docs/: index.md  installation.md  upgrading.md
docs/development/: data.md  documentation.md
glossary/: index.html
license/: index.html
mohcrm/: functional_tests.py  manage.py
requirements/: base.txt
search/: search_index.json
upgrading/: index.html
(+282 files in other folders)
